<resources>
    <string name="app_name">Pharma Share</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_cart">Add Medicine</string>
    <string name="menu_profile">Profile</string>
    <string name="anim">raw/animation</string>
    <string name="Settings">Settings</string>
    <string name="make_order">make order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">quantity</string>
    <string name="price">Price</string>
    <string name="fragment_add_medicine">Add Medicine</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="errorMassageOverExceeded">you exceeded available quantity</string>
    <string name="errorMassageUnderOneUnit">you must have one unit</string>

    <string name="addToCart">add</string>
    <string-array name="city_array">
        <item>Alexandria</item>
        <item>Cairo</item>
        <item>Giza</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Damanhur</item>
        <item>Beni Suef</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>El Mahalla El Kubra</item>
        <item>El Mansoura</item>
        <item>Tanta</item>
        <item>Fayyum</item>
        <item>Zagazig</item>
        <item>Ismailia</item>
        <item>Kafr el-Sheikh</item>
        <item>Luxor</item>
        <item>Qena</item>
        <item>El Arish</item>
        <item>El Faiyum</item>
        <item>El Minya</item>
        <item>Damietta</item>
        <item>Marsa Matruh</item>
        <item>Qalyub</item>
        <item>Abu Kabir</item>
        <item>El Tor</item>
        <item>El Gouna</item>
        <item>El Alamein</item>
        <item>Shibin El Kom</item>
    </string-array>
</resources>