<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_icon"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_add_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/menu_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/menu_order" />
    <item
        android:id="@+id/menu_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_profile" />
</menu>